# checkin

./: .travis.yml  CMakeLists.txt  Makefile  README.md  Rakefile  checkin.c  checkin.h  timeslot.c  timeslot.h
lib/: CMakeLists.txt  checkin.c  checkin.h  commands.c  commands.h  common.h  database.c  database.h  shell.c  shell.h  shell_commands.c  shell_commands.h  timeslot.c  timeslot.h
lib/shell_commands/: CMakeLists.txt  exit.c  list.c  report.c  start.c  stop.c
man/: checkin.1.md  checkin.5.md
man/man1/: checkin.1
man/man5/: checkin.5
